Fix title spacing

--- a/scss/abstract/_general.scss
+++ b/scss/abstract/_general.scss
@@ -129,6 +129,9 @@ body {
   & .wp-block-post-title {
     display: none;
   }
+  #wp--skip-link--target {
+    margin-top: 0;
+  }
 }
 
 
